fix/overflow-x issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,8 @@
   }
   body {
     @apply bg-background text-foreground;
+    user-select: none;
+    overflow-x: hidden;
   }
   .truncate-multiline-2 {
     display: -webkit-box;
